# MM-Squad

./: .gitignore  .mcp.json  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: bmad-agent-bmm-qa.agent.md  bmad-agent-mm-crane.agent.md  bmad-agent-mm-mantis.agent.md  bmad-agent-mm-monkey.agent.md  bmad-agent-mm-oogway.agent.md  bmad-agent-mm-shifu.agent.md  bmad-agent-mm-tai-lung.agent.md  bmad-agent-mm-tigress.agent.md  bmad-agent-mm-viper.agent.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_bmad/mm/: README.md  config.yaml  module-help.csv
blackjack/: glossary.md  po-analysis-bjack.md  po-dead-code-analysis-bjack.md
docs/: modernisation_agents(1).pptx  modernisation_agents_addendum(1).pptx  project_idea.md
docs/presentations/: .~lock.whitepaper.pptx#  convert_to_word.sh  create_ppt.py  demo.md  modernisation_agents.pptx  render_mermaid.py  usp.md  whitepaper.docx  whitepaper.md  whitepaper.pptx
documents/implementation-artifacts/: 1-1-project-initialisation-and-poetry-monorepo.md  (+22 more)
templates/: glossary-template.md  macro-template.md
tests/: test_dev_workflows.py  test_ide_configuration.py  test_ide_slash_commands.py  test_mantis_agent.py  test_mm_dev_workflow_commands.py  test_mm_dev_workflow_steps.py  test_mm_module_registry.py  test_monkey_agent.py  test_oogway_agent.py  test_pm_workflow_steps.py  test_project_structure.py  test_shared_infrastructure.py  test_tigress_agent.py  test_viper_agent.py
(+128 files in other folders)
